# runway-ai-usage-tracker

./: .dockerignore  .env.example  .env.traefik.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  code_review.md  codecov.yml  docker-compose.override.example.yml  docker-compose.traefik.yml  docker-compose.yml  ideas.md  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt
.crs/: dock.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  claude.yml  cleanup-ghcr.yml  codeql.yml  dependency-review.yml  hermes.yml  release-please.yml  sidecar-edge.yml  sidecar-release.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: browser_cookies.py  cache.py  chrome_cookies.py  config.py  date_utils.py  db.py  encryption.py  keychain.py  log_redaction.py  logging.py  rate_limit.py  registry.json  registry.py  security.py  sessions.py  strings.py  utils.py
app/models/: builder.py  db.py  schemas.py
app/services/: account_identity.py  accumulator.py  audit_log.py  collector_manager.py  compaction.py  cost_calculator.py  credential_provider.py  error_events.py  event_ingestor.py  event_query.py  external_metrics.py  fleet_registry.py  forecast.py  period_rollups.py  poller.py  pricing_seed.py  project_label.py  sidecar_version_checker.py  smart_collector.py  token_auto_refresher.py  token_cache.py  token_health.py  token_refresher.py  webhooks.py  window_closer.py
docs/: SECURITY.md  api-reference.md  branding.md  collection_logic.md  deployment-modes.md  deployment.md  forward-auth.md  glm-review.md  ideas.md  kimi-review.md  review.md  sidecar.md  statistics.md  troubleshooting.md
docs/collectors/: antigravity.md  chatgpt.md  chinese_ai.md  claude.md  gemini.md  github.md  kimi_api.md  kimi_code.md  kimi_coding.md  kimi_k2.md  minimax.md  ollama.md  opencode.md  openrouter.md  zai.md  zai_api.md  zai_plan.md
docs/ui_redesign/: Runway Dashboard v2.html
frontend/: index.html
frontend/css/: input.css  styles.css
frontend/js/: api.js  app.js  charts.js  components.js  layout.js  sortable.js  state.js
scratch/: check_cache.py  check_provider.py  debug_anthropic.py  inspect_cards.py  repro_github_label.py  test_ag_lsp.py  test_jwt.py  verify_fix.py
scripts/: backfill_cache_costs.py  backfill_claude_dimensions.py  backfill_project_context.py  backfill_subagent_type.py  cleanup_anthropic_sonnet_weekly.py  cleanup_antigravity.py  cleanup_opencode_free_card.py  consolidate_session_projects.py  debug_chrome_brute_v2.py  debug_chrome_cookies.py  debug_github_api.py  debug_opencode_api.py  dedup_usage_windows.py  fix_cache_token_overcounting.py  fix_gemini_3x_relabel.py  fix_gemini_model_ids.py  generate_sidecar.py  merge_gemini_default_account.py  normalize_sidecar_ids.py  reclassify_opencode_providers.py  recost_events.py  repair_chatgpt_oscillation.py  sidecar.py  sidecar_template.py  test_ag_lsp.py  test_browser_paths.py  test_chatgpt_api.py  test_claude_oauth.py  test_gemini_api.py  test_gemini_investigation.py  test_gemini_overusage.py  test_github_fix.py  test_hmac_ingest.py  test_opencode_fix.py  test_security_hardening.py  update_error_cards.py
scripts/sidecar_pkg/: identity.py  self_update.py  tls.py  update_check.py
sidecar_app/: __main__.py  autostart.py  config.py  daemon.py  settings_server.py  tray.py  updater.py
sidecar_app/assets/: generate_icons.py
sidecar_app/spec/: linux-cli.spec  linux.spec  macos.spec  windows.spec
tests/: README.md  conftest.py
tests/fixtures/: anthropic-sample.jsonl  anthropic-sidechain-sample.jsonl  chatgpt-sample.jsonl  gemini-sample.jsonl  mock_data.py  opencode_fixture.py
tests/frontend/: test_components_exports.mjs  test_history_cache.mjs  test_html.mjs  test_spark_helpers.js
tests/integration/: conftest.py  test_app_config_channel.py  test_audit_log.py  test_auth_session.py  test_cleanup_cache_invalidation.py  test_cost_forecast_anomalies.py  test_csv_export.py  test_cumulative_endpoint.py  test_dashboard_layout.py  test_db_migration.py  test_debug_raw_endpoint.py  test_endpoints.py  test_error_events_endpoint.py  test_event_ingest_endpoint.py  test_event_query_endpoints.py  test_fleet_api.py  test_fleet_endpoint.py  test_fleet_hud_browser.py  test_forecast_endpoint.py  test_history.py  test_history_downsampling.py  test_history_windows.py  test_ingest_rate_limit.py  test_local_card_ingest.py  test_new_limits_endpoint.py  test_normalize_sidecar_ids_migration.py  test_opencode_sidecar_aggregation.py  test_reclassify_opencode_providers_migration.py  test_registry_limits.py  test_sidecar_orchestration.py  test_spa_serving.py  test_status_reset.py  test_system_updates.py  test_system_version.py  test_usage_response_cache.py  test_webhooks_api.py  test_window_close_on_upsert.py
tests/services/: conftest.py  test_forecast.py  test_forecast_percent.py  test_query_global_stats.py  test_query_sessions.py  test_query_sessions_paginated.py  test_query_top_models.py  test_query_top_projects.py  test_query_top_tools.py  test_snapshots_chart.py
tests/unit/: conftest.py  test_account_identity.py  test_accumulator.py  test_anthropic_common.py  test_antigravity_collector.py  test_atomic_write.py  test_backfill_project_context.py  test_browser_cookies.py  test_browser_prefs.py  test_builder.py  test_cache.py  test_card_merge.py  test_chatgpt.py  test_chrome_cookies.py  test_codex_token_forwarding.py  test_collector_manager.py  test_collectors.py  test_compaction.py  test_config.py  test_config_secret_normalization.py  test_consolidate_session_projects.py  test_cost_calculator.py  test_credential_provider.py  test_credential_robustness.py  test_cumulative_tz.py  test_dedup_usage_windows.py  test_encryption.py  test_error_events.py  (+50 more)
webapp/: .gitignore  index.html  package-lock.json  package.json  pwa-assets.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts
(+296 files in other folders)
