[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runway"
version = "0.12.2"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "keyring>=24.0.0",
    "cryptography==46.0.7",
    "secretstorage>=3.3.0",
    "PyYAML>=6.0.0",
    "slowapi==0.1.9",
    "sqlmodel==0.0.38",
]

[project.optional-dependencies]
desktop = [
    "pystray>=0.19",
    "Pillow>=10",
    "packaging>=24",
]

# Explicit package discovery — setuptools can't auto-discover with multiple
# top-level dirs (app, assets, frontend, sidecar_app) under flat layout.
[tool.setuptools.packages.find]
include = ["app*", "sidecar_app*", "scripts*"]
exclude = ["tests*", "docs*", "assets*", "frontend*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "sidecar_app/spec",
    "scratch",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F", "I", "UP", "N", "S", "B", "A", "C4", "DTZ", "SIM", "RET", "ARG", "ERA", "PL"]
ignore = [
    "PLR0913", # Too many arguments
    "S101",    # Use of assert
    "RET504",  # Unnecessary assignment before return
    "B008",    # Do not perform function call `Depends` in argument defaults
    "S105",    # Possible hardcoded password (noisy in tests)
    "PLR2004", # Magic value used in comparison
    "PLC0415", # import should be at the top-level
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "B904",    # raise ... from err
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "E701",    # Multiple statements on one line
    "S110",    # try-except-pass
    "SIM102",  # nested-if
    "S112",    # try-except-continue
    "N806",    # Variable in function should be lowercase
    "C414",    # Unnecessary list call within sorted
    "ERA001",  # Found commented-out code
    "E402",    # Module level import not at top of file
    "PLW0603", # Using global statement
    "PLW0602", # Using global for ... but no assignment
    "PLW2901", # loop variable overwritten
    "PLW1510", # subprocess.run without explicit check
    "PLR0911", # Too many return statements
    "B905",    # zip() without explicit strict=
    "N801",    # Class name should use CapWords
    "B023",    # Function definition does not bind loop variable
    "SIM105",  # Use contextlib.suppress
    "SIM108",  # Use ternary operator
    "SIM103",  # Return condition directly
    "PLW0108", # Lambda may be unnecessary
    "S113",    # requests call without timeout
    "S108",    # Probable insecure usage of temporary file
    "N802",    # Function name should be lowercase
    "S603",    # subprocess untrusted input
    "S311",    # random not for crypto
    "S104",    # possible binding to all interfaces
    "B027",    # empty method in ABC
    "A001",    # shadowing builtin
    "B007",    # loop control variable not used
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "F841", "SIM", "DTZ", "PLR", "S", "B018"]
"scripts/*" = ["ARG", "F841", "SIM", "DTZ", "PLR", "S", "B018", "T201"]
"app/services/event_query.py" = ["S608"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
exclude = ["tests", "scripts", "sidecar_app"]

[[tool.mypy.overrides]]
module = "app.core.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.services.collectors.*"
ignore_errors = true
